--- a/Melodies of Life/Melodies of Life/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Melodies of Life/Melodies of Life/en.lproj/MainStoryboard_iPhone.storyboard
@@ -44,7 +44,7 @@
                                     <action selector="button2Pressed:" destination="2" eventType="touchUpInside" id="pMS-jq-Q1L"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="DSC_0459_m.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="hNO-dd-79B">
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="DSC_0459_m.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="hNO-dd-79B">
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="eC3-sn-a4y"/>
                                     <constraint firstAttribute="width" constant="90" id="geA-Gm-luv"/>
@@ -80,25 +80,44 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mjr-go-x1Y">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="sH9-T5-goU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="88"/>
+                                <state key="normal" title="Start">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="startButtonPressed:" destination="2" eventType="touchUpInside" id="aZ7-NY-NS1"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="BEo-R9-81K" firstAttribute="top" secondItem="kjt-Pd-8bB" secondAttribute="top" type="default" id="3Bl-V8-Jhf"/>
                             <constraint firstAttribute="trailing" secondItem="6oq-eF-eQa" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="9GC-pr-jvi"/>
+                            <constraint firstItem="2jc-BW-auL" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="100" id="A90-hr-ToZ"/>
                             <constraint firstItem="CbH-Qt-JyX" firstAttribute="leading" secondItem="kjt-Pd-8bB" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Afi-iw-MBm"/>
                             <constraint firstItem="Pjb-o2-3vL" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="EDX-xH-M5m"/>
-                            <constraint firstAttribute="trailing" secondItem="hNO-dd-79B" secondAttribute="trailing" constant="1" id="Jxr-dR-0Xl"/>
                             <constraint firstAttribute="bottom" secondItem="2jc-BW-auL" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="OQn-wf-3WE"/>
-                            <constraint firstAttribute="bottom" secondItem="CbH-Qt-JyX" secondAttribute="bottom" constant="70" id="OeA-T8-hNC"/>
                             <constraint firstItem="6oq-eF-eQa" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="QfP-hX-ASd"/>
                             <constraint firstItem="6oq-eF-eQa" firstAttribute="top" secondItem="3" secondAttribute="top" constant="198" id="Tqh-7d-VqG"/>
                             <constraint firstItem="kjt-Pd-8bB" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="V8i-Mt-aHM"/>
+                            <constraint firstAttribute="bottom" secondItem="mjr-go-x1Y" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="Wty-8U-NEb"/>
+                            <constraint firstItem="hNO-dd-79B" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="305" id="anU-2L-Skv"/>
                             <constraint firstItem="CbH-Qt-JyX" firstAttribute="top" secondItem="hNO-dd-79B" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="bxQ-KT-f7v"/>
+                            <constraint firstItem="mjr-go-x1Y" firstAttribute="top" secondItem="kjt-Pd-8bB" secondAttribute="top" type="default" id="dFQ-FP-gBo"/>
                             <constraint firstItem="BEo-R9-81K" firstAttribute="trailing" secondItem="CbH-Qt-JyX" secondAttribute="trailing" type="default" id="gm7-ap-ttI"/>
                             <constraint firstItem="Pjb-o2-3vL" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="hGR-Sp-bml"/>
                             <constraint firstAttribute="bottom" secondItem="kjt-Pd-8bB" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="hyS-MF-9jk"/>
+                            <constraint firstItem="hNO-dd-79B" firstAttribute="top" secondItem="3" secondAttribute="top" constant="399" id="j4S-aR-dkR"/>
                             <constraint firstAttribute="trailing" secondItem="Pjb-o2-3vL" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="lNL-aJ-Wlq"/>
-                            <constraint firstItem="2jc-BW-auL" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="97" id="pna-d8-QpS"/>
+                            <constraint firstItem="mjr-go-x1Y" firstAttribute="centerX" secondItem="6oq-eF-eQa" secondAttribute="centerX" type="default" id="pRQ-JA-f9L"/>
+                            <constraint firstItem="BEo-R9-81K" firstAttribute="top" secondItem="kjt-Pd-8bB" secondAttribute="top" type="default" id="vEA-FH-wyt"/>
                             <constraint firstItem="BEo-R9-81K" firstAttribute="leading" secondItem="kjt-Pd-8bB" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="zap-HE-nBD"/>
                         </constraints>
                     </view>
@@ -107,6 +126,7 @@
                         <outlet property="imageView2" destination="2jc-BW-auL" id="AnF-3d-cnl"/>
                         <outlet property="label1" destination="BEo-R9-81K" id="kNf-WE-OkN"/>
                         <outlet property="label2" destination="CbH-Qt-JyX" id="1yf-BE-zXY"/>
+                        <outlet property="startButton" destination="mjr-go-x1Y" id="Wyh-ha-jw7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
@@ -119,22 +139,6 @@
         <image name="DSC_0459.jpg" width="3920" height="2204"/>
         <image name="DSC_0459_m.jpg" width="280" height="157"/>
     </resources>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="button1Pressed:"/>
-                <relationship kind="action" name="button2Pressed:"/>
-                <relationship kind="outlet" name="imageView1" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="imageView2" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="label1" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="label2" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
