--- a/Melodies of Life/Melodies of Life/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Melodies of Life/Melodies of Life/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -105,12 +105,12 @@
                             <constraint firstItem="Pjb-o2-3vL" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="EDX-xH-M5m"/>
                             <constraint firstAttribute="bottom" secondItem="2jc-BW-auL" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="OQn-wf-3WE"/>
                             <constraint firstItem="6oq-eF-eQa" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="QfP-hX-ASd"/>
+                            <constraint firstItem="mjr-go-x1Y" firstAttribute="centerY" secondItem="kjt-Pd-8bB" secondAttribute="centerY" type="default" id="ROC-vG-HDS"/>
                             <constraint firstItem="6oq-eF-eQa" firstAttribute="top" secondItem="3" secondAttribute="top" constant="198" id="Tqh-7d-VqG"/>
                             <constraint firstItem="kjt-Pd-8bB" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="V8i-Mt-aHM"/>
                             <constraint firstAttribute="bottom" secondItem="mjr-go-x1Y" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="Wty-8U-NEb"/>
                             <constraint firstItem="hNO-dd-79B" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="305" id="anU-2L-Skv"/>
                             <constraint firstItem="CbH-Qt-JyX" firstAttribute="top" secondItem="hNO-dd-79B" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="bxQ-KT-f7v"/>
-                            <constraint firstItem="mjr-go-x1Y" firstAttribute="top" secondItem="kjt-Pd-8bB" secondAttribute="top" type="default" id="dFQ-FP-gBo"/>
                             <constraint firstItem="BEo-R9-81K" firstAttribute="trailing" secondItem="CbH-Qt-JyX" secondAttribute="trailing" type="default" id="gm7-ap-ttI"/>
                             <constraint firstItem="Pjb-o2-3vL" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="hGR-Sp-bml"/>
                             <constraint firstAttribute="bottom" secondItem="kjt-Pd-8bB" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="hyS-MF-9jk"/>
@@ -139,6 +139,24 @@
         <image name="DSC_0459.jpg" width="3920" height="2204"/>
         <image name="DSC_0459_m.jpg" width="280" height="157"/>
     </resources>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="button1Pressed:"/>
+                <relationship kind="action" name="button2Pressed:"/>
+                <relationship kind="action" name="startButtonPressed:"/>
+                <relationship kind="outlet" name="imageView1" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="imageView2" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="label1" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="label2" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="startButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
