--- a/Melodies of Life/Melodies of Life/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Melodies of Life/Melodies of Life/en.lproj/MainStoryboard_iPhone.storyboard
@@ -184,7 +184,7 @@
                         <constraints>
                             <constraint firstItem="CbH-Qt-JyX" firstAttribute="top" secondItem="3" secondAttribute="top" constant="457" id="7v7-Vq-Ram"/>
                             <constraint firstItem="BEo-R9-81K" firstAttribute="top" secondItem="3" secondAttribute="top" constant="127" id="AZO-xK-keD"/>
-                            <constraint firstAttribute="trailing" secondItem="6oq-eF-eQa" secondAttribute="trailing" constant="1" id="Bug-Uf-vn3"/>
+                            <constraint firstItem="CbH-Qt-JyX" firstAttribute="leading" secondItem="BEo-R9-81K" secondAttribute="leading" type="default" id="CBE-Av-hzN"/>
                             <constraint firstItem="6oq-eF-eQa" firstAttribute="top" secondItem="Pjb-o2-3vL" secondAttribute="top" type="default" id="CTP-Ug-0Yv"/>
                             <constraint firstItem="mjr-go-x1Y" firstAttribute="top" secondItem="3" secondAttribute="top" constant="-1" id="Cg2-Vq-nZb"/>
                             <constraint firstItem="mjr-go-x1Y" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="FN7-aL-hBV"/>
@@ -192,13 +192,13 @@
                             <constraint firstAttribute="trailing" secondItem="YQh-ol-Nc8" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="QMf-i8-9xz"/>
                             <constraint firstItem="yTg-gy-360" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="-5" id="Rkw-9n-k60"/>
                             <constraint firstItem="yTg-gy-360" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="SGV-DA-uwd"/>
-                            <constraint firstItem="BEo-R9-81K" firstAttribute="leading" secondItem="CbH-Qt-JyX" secondAttribute="leading" type="default" id="UwR-wX-II5"/>
+                            <constraint firstItem="Pjb-o2-3vL" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="50" id="XcJ-3H-tau"/>
                             <constraint firstItem="YQh-ol-Nc8" firstAttribute="top" secondItem="3" secondAttribute="top" constant="7" id="ZV7-TQ-m8s"/>
                             <constraint firstItem="mjr-go-x1Y" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="Zai-Xv-9YJ"/>
                             <constraint firstItem="yTg-gy-360" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="btA-Zo-ivh"/>
                             <constraint firstItem="6oq-eF-eQa" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="gN3-9g-7Xa"/>
                             <constraint firstItem="BEo-R9-81K" firstAttribute="trailing" secondItem="CbH-Qt-JyX" secondAttribute="trailing" type="default" id="gm7-ap-ttI"/>
-                            <constraint firstItem="Pjb-o2-3vL" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="nzH-Sc-Z93"/>
+                            <constraint firstAttribute="trailing" secondItem="6oq-eF-eQa" secondAttribute="trailing" constant="50" id="hjq-lJ-YZe"/>
                             <constraint firstItem="kjt-Pd-8bB" firstAttribute="leading" secondItem="BEo-R9-81K" secondAttribute="leading" type="default" id="o6L-sk-vzJ"/>
                             <constraint firstItem="yTg-gy-360" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="qbp-jc-eta"/>
                             <constraint firstItem="Pjb-o2-3vL" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="vWH-b6-xzc"/>
